# Empirical-False-Safety-Rate

./: .gitignore  README.md  pyproject.toml  requirements.txt
efsr/: __init__.py  build_runner.py  config.py  corpus.py  generation.py  nondeterminism.py  pipeline.py  protocol.py  replay.py  results.py  selection.py  taxonomy.py
efsr/difftest/: __init__.py  dual_harness.py  evosuite.py  junit_diff.py  randoop.py
efsr/difftest/harness/: DualRunner.java  JUnitTextRunner.java  build.sh
efsr/metrics/: __init__.py  adapter.py  ckjm.py  extractor.py  pure_python.py  types.py
efsr/stats/: __init__.py  compare.py  efsr.py  plotting.py  power.py  predictors.py
fixtures/pilot/known_divergent/modified/fixtures/pilot/known_divergent/: Range.java
fixtures/pilot/known_divergent/original/fixtures/pilot/known_divergent/: Range.java
fixtures/pilot/known_equivalent/modified/fixtures/pilot/known_equivalent/: Range.java
fixtures/pilot/known_equivalent/original/fixtures/pilot/known_equivalent/: Range.java
scripts/: aggregate_results.py  build_corpus.py  build_human_manifest.py  plan_sample_size.py  run_llm_strategy.py  run_pilot_validation.py  run_pipeline.py
tests/: test_compare.py  test_corpus.py  test_dual_harness_integration.py  test_efsr_stats.py  test_generation.py  test_junit_diff.py  test_metrics_pure_python.py  test_nondeterminism.py  test_pipeline_llm_strategy.py  test_plotting.py  test_power.py  test_predictors.py  test_protocol.py  test_results_store.py  test_selection.py  test_taxonomy.py
(+3 files in other folders)
