[project]
name = "efsr"
version = "0.1.0"
description = "Measuring the Empirical False Safety Rate (EFSR) of LLM-generated refactorings"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.3,<1.10",
    "javalang>=0.13",
    "matplotlib>=3.10.9",
]

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["efsr*"]
